--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,10 +13,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Set up JDK 11
+      - name: Set up JDK 8
         uses: actions/setup-java@v2
         with:
-          java-version: '11'
+          java-version: 1.8.0_311
 
       - name: Build with Maven
         run: mvn -B clean install
@@ -29,12 +29,15 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Set up JDK 11
+      - name: Set up JDK 8
         uses: actions/setup-java@v2
         with:
-          java-version: '11'
+          java-version: 1.8.0_311
 
       - name: Deploy to Server
         run: |
-          echo "Deploying login page to server"
+          # Replace these commands with your deployment steps
+          echo "Deploying login page to production server..."
+          # Example: scp or rsync commands to transfer files to the server
+
 
