--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,7 @@ jobs:
         uses: actions/setup-java@v2
         with:
           java-version: 1.8.0_311
+          distribution: 'ubuntu'
 
       - name: Build with Maven
         run: mvn -B clean install
@@ -34,9 +35,11 @@ jobs:
         uses: actions/setup-java@v2
         with:
           java-version: 1.8.0_311
+          distribution: 'ubuntu'
 
       - name: Deploy to Server
         run: |
           # Replace these commands with your deployment steps
           echo "Deploying login page to production server..."
           # Example: scp or rsync commands to transfer files to the server
+
