--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,42 +1,40 @@
-# .github/workflows/ci-cd.yml
-name: Java CI/CD with Maven
+name: Java Maven Build & Publish Artifact
 
 on:
   push:
-    branches:
-      - main
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
 jobs:
-  build:
+  build_test:
+
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+    - uses: actions/checkout@v3
+    - name: Set up JDK 17
+      uses: actions/setup-java@v3
+      with:
+        java-version: '17'
+        distribution: 'temurin'
+        cache: maven
+    - name: Build with Maven
+      run: mvn -B package --file pom.xml
 
-      - name: Set up JDK 8
-        uses: actions/setup-java@v2
-        with:
-          java-version: 1.8.0_311
-          distribution: 'ubuntu'
-
-      - name: Build with Maven
-        run: mvn -B clean install
-
-  deploy:
-    needs: build
+   
+  publish-job:
     runs-on: ubuntu-latest
-
+    needs: build_test
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Set up JDK 8
-        uses: actions/setup-java@v2
-        with:
-          java-version: 1.8.0_311
-          distribution: 'ubuntu'
-
-      - name: Deploy to Server
-        run: |
-          echo "Deploying login page to production server..."
+    - uses: actions/checkout@v3
+    - uses: actions/setup-java@v3
+      with:
+        java-version: '17'
+        distribution: 'temurin'
+    - run: mvn --batch-mode --update-snapshots verify
+    - run: mkdir staging && cp target/*.jar staging
+    - uses: actions/upload-artifact@v3
+      with:
+        name: Package
+        path: staging
